- allow simplified word format for searching (2011/06/16 MS)
- fixed some typos in pali lessons and extended them (2011/06/16 MS)

1.01:
- allow definition of multiple lessons within one file
- organized pali example lessons into two files and fixed some typos

1.0:
- initial public release